# OrcaOps

./: AGENTS.md  CLAUDE.md  Dockerfile  README.md  demo_cli_enhancements.py  demo_docker_manager.py  main.py  pyproject.toml  requirements.txt  run_api.py  run_test.sh  sandboxes.yml  simple_test.py  test_docker_build.py  test_docker_manager.py  test_environment.py  test_integration.py  ultra_simple_test.py
docs/: ROADMAP.md  SPRINT-01.md  SPRINT-02.md  SPRINT-03.md  SPRINT-04.md  SPRINT-05.md  SPRINT-06.md
examples/workflows/: ci-pipeline.yaml
orcaops/: __init__.py  anomaly_detector.py  api.py  audit.py  auth.py  auth_middleware.py  auto_optimizer.py  cli.py  cli_enhanced.py  cli_jobs.py  cli_optimization.py  cli_utils.py  cli_utils_fixed.py  cli_workflows.py  cli_workspaces.py  docker_manager.py  interactive_mode.py  job_manager.py  job_runner.py  knowledge_base.py  log_analyzer.py  main_cli.py  mcp_server.py  metrics.py  policy_engine.py  predictor.py  quota_tracker.py  recommendation_engine.py  run_store.py  sandbox_registry.py  sandbox_runner.py  sandbox_templates.py  sandbox_templates_simple.py  schemas.py  service_manager.py  session_manager.py  workflow_manager.py  workflow_runner.py  workflow_schema.py  workflow_store.py  (+1 more)
test-site/: Makefile  README.md  docker-compose.yml
test-site/frontend/: package.json
test-site/html/: index.html
test_project/: Dockerfile  app.py  requirements.txt
test_project/templates/: index.html
tests/: test_anomaly_detector.py  test_api_anomalies.py  test_api_baselines.py  test_api_observability.py  test_api_optimization.py  test_api_predictions.py  test_api_recommendations.py  test_api_runs.py  test_api_streaming.py  test_api_workflows.py  test_api_workspaces.py  test_audit.py  test_auth.py  test_auth_middleware.py  test_auto_optimizer.py  test_baselines.py  test_builder_integration.py  test_cli.py  test_cli_jobs.py  test_cli_observability.py  test_cli_optimization.py  test_cli_workflows.py  test_cli_workspaces.py  test_docker_manager.py  test_docker_network.py  test_enhanced_baselines.py  test_golden_path.py  test_integration_security.py  test_job_runner_observability.py  test_knowledge_base.py  test_log_analyzer.py  test_mcp_anomalies.py  test_mcp_baselines.py  test_mcp_observability.py  test_mcp_optimization.py  test_mcp_predictions.py  test_mcp_recommendations.py  test_mcp_server.py  test_mcp_workflows.py  test_mcp_workspaces.py  (+17 more)
