[project]
name = "orcaops"
version = "0.1.0"
description = "Orca Operations Tools - Docker and Sandbox Management"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "docker",
    "packaging",
    "typer>=0.16.0",
    "requests",
    "rich",
]

[project.urls]
"Homepage" = "https://example.com/orcaops" # Placeholder

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=orcaops --cov-report=term-missing --cov-report=xml"
testpaths = [
    "tests",
]
pythonpath = ["."] # Add current directory to pythonpath to help with imports if needed
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
