[project]
name = "orcaops"
version = "0.1.0"
description = "Orca Operations Tools - Docker and Sandbox Management"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "docker>=7.0,<8.0",
    "packaging",
    "typer>=0.16.0,<1.0",
    "requests",
    "rich>=13.0",
    "pyyaml>=5.0",
    "psutil",
    "fastapi>=0.100.0,<1.0",
    "uvicorn[standard]>=0.20.0",
    "pydantic>=2.0,<3.0",
    "mcp>=1.0,<2.0",
]

[project.urls]
"Homepage" = "https://example.com/orcaops" # Placeholder

[project.scripts]
orcaops = "orcaops.main_cli:app"
orcaops-mcp = "orcaops.mcp_server:main"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
api = [
    "fastapi[all]",
    "uvicorn[standard]",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["orcaops*"]
exclude = ["test_project*", "tests*"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=orcaops --cov-report=term-missing --cov-report=xml"
testpaths = [
    "tests",
]
markers = [
    "docker: marks tests that require a running Docker daemon",
]
pythonpath = ["."] # Add current directory to pythonpath to help with imports if needed
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
